fix(card): allow card header to wrap
fixes #3713

--- a/src/patternfly/components/Card/card.scss
+++ b/src/patternfly/components/Card/card.scss
@@ -115,7 +115,7 @@
 
 .pf-c-card__header {
   display: flex;
-  flex-direction: row;
+  flex-flow: row wrap;
   align-items: center;
 
   .pf-c-card__title {
